fix toolbar z-index

--- a/protected/scss/_toolbar.scss
+++ b/protected/scss/_toolbar.scss
@@ -3,7 +3,7 @@
 	position: fixed;
 	left: 10px;
 	bottom: 50px;
-	z-index: 2000;
+	z-index: 1050;
 }
 #sy-page-topbar {
 	position: fixed;
